Changed links on main index page into an unordered list

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes </h1>
-
-    <a href="/currychicken.html">Boneless Curry Chicken</a>
-    <a href="/jerkedchickenskillet.html">Jerked Chicken Skillet</a>
+<ul>
+    <li><a href="/currychicken.html">Boneless Curry Chicken</a></li>
+    <li><a href="/jerkedchickenskillet.html">Jerked Chicken Skillet</a></li>
+</ul>
 </body>
 </html>
