--- a/jerkedchickenskillet.html
+++ b/jerkedchickenskillet.html
@@ -51,13 +51,14 @@
 
         distilled white vinegar</li>
 </ul>
-
+<h2>Steps</h2>
 <ol>
     <li>Arrange a rack in the middle of the oven and heat to 350°F.</li>
     <li>Pat the chicken thighs dry with paper towels. Place the chicken thighs and jerk seasoning in a large bowl and toss until well-coated. Season all over with salt and pepper. Heat the oil in a 10-inch or larger cast iron or oven-safe skillet over medium-high heat until shimmering. Add the chicken skin-side down and cook until the fat is rendered and the skin is crisp and golden-brown, 5 to 6 minutes. Flip the chicken and cook for 3 minutes. Transfer the chicken to a plate; set aside.</li>
     <li>Reduce the heat to medium and add the onion to the pan. Cook, stirring occasionally, until softened, about 3 minutes. Add the garlic and cook 1 minute more. Add the rice, beans, 1/2 teaspoon salt, and 1/4 teaspoon pepper, and stir to combine. Cook for 2 minutes. Stir in the coconut milk, chicken broth, and bay leaf. Bring to a boil. Remove the pan from the heat, place the chicken skin-side up on top of the rice (add any juices accumulated on the plate), and top with the thyme sprigs.</li>
     <li>Bake until the chicken is cooked through and the rice is tender, 20 to 25 minutes.Transfer the chicken to plates. Add the vinegar to the skillet and stir into the rice. Discard the bay leaf and thyme sprigs and serve the rice with the chicken. </li>
 </ol>
+
 
 
 </body>
