--- a/macaroni.html
+++ b/macaroni.html
@@ -10,5 +10,24 @@
     <h1>Spicy Chicken and Bacon Mac</h1>
 <img src="/pics/Spicy-Chicken-and-Bacon-Mac.jpg"  style="width: 300px; height: 300px;" alt="A bowl ofSpicy Chicken and Bacon Mac" >
 
+<h1>Ingredients</h1>
+<ul>
+<li>1-1/2 cups uncooked cavatappi pasta or elbow macaroni</li>
+<li>3 tablespoons butter</li>
+<li>3 tablespoons all-purpose flour</li>
+<li>1-1/2 cups heavy whipping cream</li>
+<li>1/2 cup 2% milk</li>
+<li>1 teaspoon Cajun seasoning</li>
+<li>1/4 teaspoon salt</li>
+<li>1/4 teaspoon pepper</li>
+<li>2 cups shredded pepper jack cheese</li>
+<li>2 cups shredded cooked chicken</li>
+<li>6 bacon strips, cooked and crumbled</li>
+<li>1 jalapeno pepper, seeded and chopped</li>
+<li>1 cup crushed kettle-cooked potato chips or panko bread crumbs</li>
+</ul>
+
+
+
 </body>
 </html>
