Added steps to macaroni recipe page

--- a/macaroni.html
+++ b/macaroni.html
@@ -27,6 +27,12 @@
 <li>1 cup crushed kettle-cooked potato chips or panko bread crumbs</li>
 </ul>
 
+<h2>Steps</h2>
+<ol>
+    <li>Cook pasta according to package directions for al dente; drain. Preheat broiler.</li>
+    <li>In a 10-inch cast-iron or other ovenproof skillet, heat butter over medium heat. Stir in flour until blended; cook and stir until lightly browned, 1-2 minutes (do not burn). Gradually whisk in cream, milk, Cajun seasoning, salt and pepper. Bring to a boil, stirring constantly. Reduce heat; cook and stir until thickened, about 5 minutes. Stir in cheese until melted. Add pasta, chicken, bacon and jalapeno; cook and stir until heated through. Sprinkle chips over top.</li>
+    <li>Broil 3-4 inches from heat until chips are browned, about 30 seconds. </li>
+</ol>
 
 
 </body>
