Updated the link to the Macaroni recipe page to reflect correct recipe name in link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <ul>
     <li><a href="/currychicken.html">Boneless Curry Chicken</a></li>
     <li><a href="/jerkedchickenskillet.html">Jerked Chicken Skillet</a></li>
-    <li><a href="/macaroni.html">Macaroni and Chicken</a></li>
+    <li><a href="/macaroni.html">Spicy Chicken and Bacon Mac</a></li>
 </ul>
 </body>
 </html>
